# brazuclaw

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  pyproject.toml
brazuclaw/: ALMA.md  __init__.py  codex_runner.py  config.py  main.py  memoria.py  telegram_api.py  wizard.py
brazuclaw/skills/: skill-list.md
brazuclaw/skills/chrome-cdp-playwright/: skill.md
brazuclaw/skills/chrome-desktop/: screenshot.py  skill.md
brazuclaw/skills/how-to-make-new-skills/: skill.md
scripts/: mac-nosleep.sh
